syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.fluxrpc.grpc";
option java_outer_classname = "StreamingDemoProto";

service DemoService {
    rpc UnaryCall (UnaryRequest) returns (UnaryResponse);
    rpc ServerStreamingCall (ServerStreamingRequest) returns (stream ServerStreamingResponse);
    rpc ClientStreamingCall (stream ClientStreamingRequest) returns (ClientStreamingResponse);
    rpc BiDiStreamingCall (stream BiDiRequest) returns (stream BiDiResponse);
}

message UnaryRequest { string message = 1; }
message UnaryResponse { string message = 1; }
message ServerStreamingRequest { int32 count = 1; }
message ServerStreamingResponse { string message = 1; }
message ClientStreamingRequest { string message = 1; }
message ClientStreamingResponse { string summary = 1; }
message BiDiRequest { string message = 1; }
message BiDiResponse { string message = 1; }
